feat(ui): melhorar estilo das páginas — painéis, títulos, descrição, botões; estruturar HTML gerado e esconder estado vazio

--- a/listarTarefas.html
+++ b/listarTarefas.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Lista de tarefas</title>
   </head>
   <body>
-    <h1>Lista de tarefas</h1>
-    <ul id="montarLista"></ul>
+    <div class="panel">
+      <h1>Lista de tarefas</h1>
+      <ul id="montarLista"></ul>
+      <div class="empty" id="emptyState">Carregando tarefas...</div>
+    </div>
     <script src="/script.js"></script>
     <script>
       getLista();
