--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Document</title>
   </head>
   <body>
-    <div>
+    <div class="panel">
       <h1>Cadastro de Tarefas</h1>
       <a href="http://localhost:5500/listarTarefas.html">Ver tarefas criadas</a>
-      <div>
+      <div class="form-group">
         <label>Título da tarefa</label><br />
         <input id="titulo" type="text" placeholder="Título da tarefa" />
       </div>
-      <div>
+      <div class="form-group">
         <label>Descrição da tarefa</label><br />
         <textarea id="descricao" placeholder="Descrião da tarefa"></textarea>
       </div>
