--- a/listarTarefas.html
+++ b/listarTarefas.html
@@ -9,11 +9,33 @@
   <body>
     <div class="panel">
       <h1>Lista de tarefas</h1>
+      <a href="http://localhost:5500/index.html">Novas tarefas</a>
+
+      <!-- Auth status / logout -->
+      <div id="authStatusBox" style="margin-top:12px; font-size:14px; color:#475569;"></div>
       <ul id="montarLista"></ul>
       <div class="empty" id="emptyState">Carregando tarefas...</div>
     </div>
+    <script type="module" src="/firebase-init.js"></script>
     <script src="/script.js"></script>
     <script>
+      // tenta mostrar status de autenticação quando AppAuth estiver pronto
+      (function () {
+        const statusBox = document.getElementById('authStatusBox');
+        let tries = 0;
+        const iv = setInterval(() => {
+          tries += 1;
+          if (window.AppAuth) {
+            window.AppAuth.onAuthStateChanged((user) => {
+              statusBox.innerText = user ? `Logado: ${user.email || user.uid}` : 'Não autenticado';
+              // quando logado, recarrega a lista
+              if (user && typeof getLista === 'function') getLista();
+            });
+            clearInterval(iv);
+          }
+          if (tries > 10) { clearInterval(iv); }
+        }, 400);
+      })();
       getLista();
     </script>
   </body>
