--- a/listarTarefas.html
+++ b/listarTarefas.html
@@ -7,12 +7,19 @@
     <title>Lista de tarefas</title>
   </head>
   <body>
-    <div class="panel">
-      <h1>Lista de tarefas</h1>
-      <a href="http://localhost:5500/index.html">Novas tarefas</a>
+    <script src="/topnav.js"></script>
+    <!--
+      listarTarefas.html
+      - Página para visualizar, editar e deletar tarefas.
+      - Chama `getLista()` em `script.js` para renderizar as tarefas do usuário.
+    -->
 
-      <!-- Auth status / logout -->
-      <div id="authStatusBox" style="margin-top:12px; font-size:14px; color:#475569;"></div>
+    <div class="panel">
+      <div class="panel-header">
+        <h1>Lista de tarefas</h1>
+      </div>
+
+      <!-- Auth info shown in the navbar -->
       <ul id="montarLista"></ul>
       <div class="empty" id="emptyState">Carregando tarefas...</div>
     </div>
@@ -21,22 +28,24 @@
     <script>
       // tenta mostrar status de autenticação quando AppAuth estiver pronto
       (function () {
-        const statusBox = document.getElementById('authStatusBox');
         let tries = 0;
         const iv = setInterval(() => {
           tries += 1;
           if (window.AppAuth) {
             window.AppAuth.onAuthStateChanged((user) => {
-              statusBox.innerText = user ? `Logado: ${user.email || user.uid}` : 'Não autenticado';
-              // quando logado, recarrega a lista
+              // apenas recarrega a lista quando houver usuário; o banner é
+              // atualizado pelo script compartilhado `auth-banner.js`.
               if (user && typeof getLista === 'function') getLista();
             });
             clearInterval(iv);
           }
-          if (tries > 10) { clearInterval(iv); }
+          if (tries > 10) {
+            clearInterval(iv);
+          }
         }, 400);
       })();
       getLista();
     </script>
+    <script src="/auth-banner.js"></script>
   </body>
 </html>
