fix: make asset paths relative for GitHub Pages (remove leading slashes); update firebase import path

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Lista de Tarefas</title>
   </head>
   <body>
-    <script src="/topnav.js"></script>
+    <script src="topnav.js"></script>
     <!--
       index.html
       - Página de cadastro de tarefas e UI de autenticação (entrar / registrar).
@@ -60,9 +60,9 @@
       <button onclick="criarTarefa()">Cadastrar</button>
       <p id="mensagem"></p>
     </div>
-    <script type="module" src="/firebase-init.js"></script>
-    <!-- <script type="module" src="/firebaseConfig.js"></script> -->
-    <script src="/script.js"></script>
+    <script type="module" src="firebase-init.js"></script>
+    <!-- <script type="module" src="firebaseConfig.js"></script> -->
+    <script src="script.js"></script>
     <script>
       // Inicializa handlers de autenticação (se AppAuth estiver disponível)
       (function () {
@@ -149,6 +149,6 @@
         }, 500);
       })();
     </script>
-    <script src="/auth-banner.js"></script>
+    <script src="auth-banner.js"></script>
   </body>
 </html>
