--- a/listarTarefas.html
+++ b/listarTarefas.html
@@ -7,7 +7,7 @@
     <title>Lista de tarefas</title>
   </head>
   <body>
-    <script src="/topnav.js"></script>
+    <script src="topnav.js"></script>
     <!--
       listarTarefas.html
       - Página para visualizar, editar e deletar tarefas.
@@ -23,8 +23,8 @@
       <ul id="montarLista"></ul>
       <div class="empty" id="emptyState">Carregando tarefas...</div>
     </div>
-    <script type="module" src="/firebase-init.js"></script>
-    <script src="/script.js"></script>
+    <script type="module" src="firebase-init.js"></script>
+    <script src="script.js"></script>
     <script>
       // tenta mostrar status de autenticação quando AppAuth estiver pronto
       (function () {
@@ -46,6 +46,6 @@
       })();
       getLista();
     </script>
-    <script src="/auth-banner.js"></script>
+    <script src="auth-banner.js"></script>
   </body>
 </html>
