--- a/topnav.html
+++ b/topnav.html
@@ -16,8 +16,8 @@
       <!-- placeholder para informações de usuário (avatar, nome, logout) -->
       <div class="auth-left" id="topnavAuth" aria-live="polite"></div>
       <div class="links">
-        <a href="/index.html">Cadastrar</a>
-        <a href="/listarTarefas.html">Listar</a>
+        <a href="index.html">Cadastrar</a>
+        <a href="listarTarefas.html">Listar</a>
       </div>
     </div>
   </body>
