--- a/index.html
+++ b/index.html
@@ -20,24 +20,18 @@
       </div>
 
       <!-- Auth UI: o usuário deve preencher firebaseConfig.js (a partir do sample) para ativar -->
-      <div id="authPanel" style="margin-top: 12px">
+      <div id="authPanel">
         <div id="authForm">
-          <input
-            id="authEmail"
-            type="email"
-            placeholder="seu@email.com"
-            style="width: 48%; margin-right: 4%; padding: 8px"
-          />
+          <input id="authEmail" type="email" placeholder="seu@email.com" />
           <input
             id="authPass"
             type="password"
             placeholder="Mínimo 6 caracteres"
-            style="width: 48%; padding: 8px"
           />
-          <div style="margin-top: 8px; display: flex; gap: 8px">
+          <div class="auth-buttons">
             <button id="btnSignIn">Entrar</button>
             <button id="btnSignUp">Registrar</button>
-            <button id="btnSignOut" style="display: none">Sair</button>
+            <button id="btnSignOut">Sair</button>
           </div>
         </div>
         <!-- authStatus removed: top-right banner shows auth state -->
@@ -63,92 +57,6 @@
     <script type="module" src="firebase-init.js"></script>
     <!-- <script type="module" src="firebaseConfig.js"></script> -->
     <script src="script.js"></script>
-    <script>
-      // Inicializa handlers de autenticação (se AppAuth estiver disponível)
-      (function () {
-        function setupAuthHandlers() {
-          const status = document.getElementById('authStatus');
-          const btnSignOut = document.getElementById('btnSignOut');
-          const btnSignIn = document.getElementById('btnSignIn');
-          const btnSignUp = document.getElementById('btnSignUp');
-          const authForm = document.getElementById('authForm');
-          const emailEl = document.getElementById('authEmail');
-          const passEl = document.getElementById('authPass');
-
-          if (!window.AppAuth) return;
-
-          window.AppAuth.onAuthStateChanged((user) => {
-            // 'status' element may have been removed (we now use the top-right banner).
-            // Guardamos para evitar 'Cannot set properties of null'.
-            if (
-              typeof status !== 'undefined' &&
-              status &&
-              status instanceof Element
-            ) {
-              if (user)
-                status.innerText = 'Logado como: ' + (user.email || user.uid);
-              else status.innerText = 'Não autenticado';
-            }
-
-            if (user) {
-              if (authForm) authForm.style.display = 'none';
-              btnSignOut.style.display = 'inline-block';
-              btnSignIn.style.display = 'none';
-              btnSignUp.style.display = 'none';
-              // recarrega lista (caso esteja na página de listagem)
-              if (typeof getLista === 'function') getLista();
-            } else {
-              if (authForm) authForm.style.display = 'block';
-              btnSignOut.style.display = 'none';
-              btnSignIn.style.display = 'inline-block';
-              btnSignUp.style.display = 'inline-block';
-            }
-          });
-
-          btnSignIn.addEventListener('click', async () => {
-            try {
-              await window.AppAuth.signIn(emailEl.value, passEl.value);
-            } catch (e) {
-              alert('Erro ao entrar: ' + e.message);
-            }
-          });
-
-          btnSignUp.addEventListener('click', async () => {
-            try {
-              await window.AppAuth.signUp(emailEl.value, passEl.value);
-            } catch (e) {
-              alert('Erro ao registrar: ' + e.message);
-            }
-          });
-
-          btnSignOut.addEventListener('click', async () => {
-            try {
-              await window.AppAuth.signOut();
-            } catch (e) {
-              console.error(e);
-            }
-          });
-        }
-
-        // tenta rodar algumas vezes caso o módulo ainda não tenha inicializado
-        let tries = 0;
-        const iv = setInterval(() => {
-          tries += 1;
-          if (window.AppAuth) {
-            setupAuthHandlers();
-            // também atualiza o banner imediatamente com o estado atual (se houver)
-            if (
-              window.AppAuth &&
-              typeof window.AppAuth.onAuthStateChanged === 'function'
-            ) {
-              // o callback onAuthStateChanged será chamado imediatamente com o estado atual
-            }
-            clearInterval(iv);
-          }
-          if (tries > 10) clearInterval(iv);
-        }, 500);
-      })();
-    </script>
     <script src="auth-banner.js"></script>
   </body>
 </html>
